If page is too short, don't center vertically, just display from the top. This should fix an issue with the Android keyboard where the text field you're trying to type into disappears off the top of the page

--- a/client/ducks.css
+++ b/client/ducks.css
@@ -54,6 +54,14 @@ body {
     margin: auto;
 }
 
+@media screen and ( max-height: 576px ) {
+    /* Don't center if it doesn't fit, we don't want the top cut off */
+    #game {
+        position: static;
+    }
+
+}
+
 #panel {
     white-space: normal;
     display: inline-block;
